# reel-to-recipe

./: .gitignore  AGENTS.md  Caddyfile  Dockerfile.mcp  LICENSE  README.md  app.py  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  drunken_sailor_recipe.txt  export-ig-cookie.sh  import_likes.py  install_whisper.sh  liked_reels_cache.json  main.py  mcp_server.py  pyproject.toml  reel-to-recipe.service  setup.sh  steak_shrimp_hibachi_recipe.txt  test_ocr.sh  test_whisper.sh  test_whisper2.sh
.hermes/: ios-viewport-bug.md  ios-viewport-fix-analysis.md
.hermes/plans/: 2026-06-11_mass-import.md
docs/: agent-onboarding.md  agent-setup.md  development.md  discord-auth-setup.md  https-deployment.md  instagram-age-restricted.md  ios-home-screen-app.md  mcp-server.md  tiktok-download-research.md
scripts/: reset_test_env.sh  seed_test_db.py  test_modal_ios.py  test_modal_visual.py
templates/: index.html  result.html
tests/: conftest.py  pytest.ini  requirements.txt  run_tests.sh  test_dynamic_island.py  test_grocery_custom.py  test_ingredient_merge.py  test_mcp_server.py  test_ocr_helpers.py  test_ui.py  test_ui_bugs.py  test_url_normalization.py  test_web_api.py
web/: Dockerfile  app.py  auth.py  ingredient_merge.py  requirements.txt  seed.py
web/static/: app.js  manifest.json  meal-plan.css  meal-plan.js  style.css  sync.js
web/templates/: index.html  login.html
