[project]
name = "tiktok-recipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.10,<0.15",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mcp>=1.27.2",
    "openai-whisper>=20250625",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.30",
    "uvicorn>=0.48.0",
    "yt-dlp>=2026.3.17",
]
