[project]
name = "tiktok-recipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.10,<0.15",
    "httpx>=0.28.1",
    "mcp>=1.27.2",
    "faster-whisper>=1.1.0",
    "imagehash>=4.3.1",
    "openai>=1.0,<3",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "yt-dlp>=2026.3.17",
]
